Melhorias para AT - Adição da página de aniversariantes do dia, e remoção da paste de Dados salvos em memoria.

--- a/TP3-ASPNet/TP3-ASPNet/Views/Pessoa/Index.cshtml
+++ b/TP3-ASPNet/TP3-ASPNet/Views/Pessoa/Index.cshtml
@@ -13,6 +13,9 @@
     </div>
 </form>
 <p>
+    <a asp-action="AniversariantesDia">VEJA QUEM FAZ ANIVERSARIO HOJE!!!</a>
+</p>
+<p>
     <a asp-action="Criar">Criar nova pessoa</a>
 </p>
 <table class="table">
