Melhorias para AT - Ordenação da Lista de aniversariantes, e adição dos dias restntes para o proximo aniversario.

--- a/TP3-ASPNet/TP3-ASPNet/Views/Pessoa/Index.cshtml
+++ b/TP3-ASPNet/TP3-ASPNet/Views/Pessoa/Index.cshtml
@@ -30,6 +30,9 @@
             <th>
                 Data de Nascimento
             </th>
+            <th>
+                Dias Restantes
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -44,6 +47,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.birth)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.DiasRestantes)
             </td>
             <td>
                 @Html.ActionLink("Editar", "Editar", new { id = item.Id }) |
