--- a/TP3-ASPNet/TP3-ASPNet/Views/Home/Index.cshtml
+++ b/TP3-ASPNet/TP3-ASPNet/Views/Home/Index.cshtml
@@ -2,7 +2,10 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+    <div class="text-center">
+        <h1 class="display-4">Welcome</h1>
+        <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+        <p>
+            <a href="https://localhost:44349/Pessoa"> Entre no gerenciador de Aniversarios!! </a>
+        </p>
+    </div>
